updated ui, manifast

--- a/popup/hello.html
+++ b/popup/hello.html
@@ -5,7 +5,12 @@
 </head>
 
 <body>
-    <h1>UMP E-PAT with less click</h1>
+     <h1>UMP E-PAT with less click</h1>
+    <p>You must be accessing: <br />
+        <a href="https://std-comm.ump.edu.my/ecommstudent/epat2.jsp">
+            https://std-comm.ump.edu.my/ecommstudent/epat2.jsp
+        </a>
+    </p>
     <p>Select all as: </p>
     <div id="button-flex"></div>
 
